@@ -15,6 +15,8 @@ not yet  BJH  Release 10.49.00
               pngtopam: use png_create_read_struct() instead of
               png_create_write_struct().  Doesn't seem to affect anything.
 
+              configure: advise if adding -lz -lm fixes libpng link problem.
+
 09.09.27 BJH  Release 10.48.00
 
               ppmsvgalib: Wait to initialize Svgalib to prevent it from
